# mrtool

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  deploy.yml  python-build.yml
docs/source/: conf.py  index.rst
docs/source/concepts/: index.rst
docs/source/concepts/data_gen/: range_exposure.rst  rr1_binary.rst  rr2_log_linear.rst
docs/source/examples/: example_linear.rst
src/mrtool/: __about__.py  __init__.py  cov_model.py  data.py  model.py  utils.py
src/mrtool/core/: cov_model.py  data.py  ensemble_model.py  limetr_api.py  model.py  other_sampling.py  plots.py  prior.py  soln.py  utils.py
src/mrtool/cov_selection/: covfinder.py
src/mrtool/evidence_score/: continuous.py  dichotomous.py  loglinear.py  scorelator.py
src/mrtool/netmr/: cov_model.py  data.py  model.py  plots.py
src/mrtool/xwalk/: data.py  model.py
tests/: test_cat_covmodel.py  test_covmodel.py  test_data.py  test_utils.py
tests/core/: test_column.py  test_covariate.py  test_covmodel.py  test_data.py  test_mrbrt.py  test_prior.py  test_soln.py  test_utils.py
tests/netmr/: test_dormcolumn.py  test_netcovmodel.py  test_netmrdata.py
tests/xwalk/: test_xdata.py
