[metadata]
name = mrtool
version = 0.0.3
description = "Featured nonlinear mixed effects model"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = IHME Math Sciences
author_email = ihme.math.sciences@gmail.com
license = BSD 2-Clause License
url = https://github.com/ihmeuw-msca/mrtool


[options]
zip_safe = False
install_requires =
    numpy
    pandas
    scipy
    xspline
    xarray
    limetr==0.0.5
include_package_data = True
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    sphinx-autodoc-typehints
    furo
dev =
    pytest
    pytest-mock